--- a/package.json
+++ b/package.json
@@ -31,12 +31,16 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
     "@types/passport-jwt": "^3.0.7",
+    "axios": "^1.1.3",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "handlebars": "^4.7.7",
     "mysql": "^2.18.1",
     "nodemailer": "^6.8.0",
     "passport": "^0.6.0",
+    "passport-facebook": "^3.0.0",
+    "passport-github2": "^0.1.12",
+    "passport-google-oauth2": "^0.2.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
@@ -55,6 +59,9 @@
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.0.0",
     "@types/nodemon": "^1.19.2",
+    "@types/passport-facebook": "^2.1.11",
+    "@types/passport-github2": "^1.2.5",
+    "@types/passport-google-oauth2": "^0.1.5",
     "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
